[screencasts]: fix mobile overlapping issues.  (#608)
* fix the nav overlapping issue.

* fix the screencast overlapping issue on mobile.

--- a/src/assets/scss/_header.scss
+++ b/src/assets/scss/_header.scss
@@ -11,7 +11,7 @@
   background: var(--off-white);
   padding: var(--x-large) 0;
   box-shadow: 0px 0.625rem 1.5rem -0.625rem rgba(0, 0, 0, 0.08);
-  z-index: 1;
+  z-index: 2;
   font-size: var(--p-large);
 }
 .items.h a:not(:last-child) {
